# symbioAI

./: .gitignore  .gitmodules  ACTION_PLAN_GET_TO_70_PERCENT.md  ACTIVE_LEARNING_COMPLETE.md  ACTIVE_LEARNING_IMPLEMENTATION_REPORT.md  ACTIVE_LEARNING_QUICK_START.md  ACTIVE_LEARNING_VISUAL_OVERVIEW.md  AUTOMATED_THEOREM_PROVING_COMPLETE.md  BUG_FIXES_COMPLETE.md  CAUSAL_DER_FIXES.md  CAUSAL_DER_RESEARCH_ROADMAP.md  CAUSAL_DIAGNOSIS_DOCUMENTATION_INDEX.md  CAUSAL_DIAGNOSIS_SUMMARY.md  CAUSAL_DIAGNOSIS_VISUAL_OVERVIEW.md  CAUSAL_SELF_DIAGNOSIS_IMPLEMENTATION_REPORT.md  CITATION.cff  CLEANUP_SUMMARY.md  COMPARE_WITH_COMPETITORS.md  COMPLETE_EXPLANATION_AND_FUNDING_GUIDE.md  COMPLETE_FUNDING_PACKAGE.md  COMPOSITIONAL_CONCEPT_COMPLETE.md  COMPOSITIONAL_CONCEPT_IMPLEMENTATION_REPORT.md  COMPOSITIONAL_CONCEPT_QUICK_SUMMARY.md  COMPOSITIONAL_CONCEPT_VERIFICATION.md  CONTINUAL_LEARNING_COMPLETE.md  DOCUMENTATION_INDEX.md  DO_I_NEED_LLM.md  DYNAMIC_ARCHITECTURE_COMPLETE.md  DYNAMIC_ARCHITECTURE_QUICK_START.md  Dockerfile  EMBODIED_AI_COMPLETE.md  EMBODIED_AI_QUICK_START.md  EMBODIED_AI_SUMMARY.md  EXECUTIVE_SUMMARY.md  FIX_BUGS_FOR_PUBLICATION.md  GPU_PROVIDER_COMPARISON.md  GPU_QUICK_REFERENCE.md  HOW_TO_RUN.md  HOW_TO_TEST_IRL.md  HYBRID_NEURAL_SYMBOLIC_IMPLEMENTATION_COMPLETE.md  (+127 more)
.github/: copilot-instructions.md
Documents/: RESEARCH_SUMMARY_1PAGE.md
adapters/: __init__.py  loader.py
agents/: orchestrator.py
api/: gateway.py
cleanup_backup_20251020_113904/: COMPARISON_ANALYSIS.md  CRITICAL_BUGS_FOUND.md  EXPERIMENT_COMPLETED_5EPOCH.md  FIXED_CAUSAL_DER_RESULTS.md  MIGRATION_GUIDE.md  NAN_PREVENTION_IMPLEMENTATION.md  RESULTS_5EPOCH.md  SOTA_CAUSAL_DER_GUIDE.md  STABILITY_FIXES.md  URGENT_FINDINGS.md  advanced_evolution.py  causal_modules.py  causal_self_diagnosis.py  continual_learning.py  cross_task_transfer.py  der_plus_plus.py  distill.py  dynamic_architecture_evolution.py  embodied_ai_simulation.py  evolution.py  metacognitive_monitoring.py  one_shot_meta_learning.py  quantization_aware_evolution.py  run_5epoch_stable.sh  run_causal_der_50epoch_fixed.sh  run_causal_der_5epoch_fixed.sh  run_causal_der_5epoch_stable.sh  run_causal_der_multiseed_5epoch.sh  run_derpp_5epoch_baseline.sh  smoke_causal_der.py  sparse_mixture_adapters.py  test_derpp_only.sh  test_official_hyperparams.sh  test_official_output.txt  test_pure_derpp_mode.sh  test_pure_derpp_output.txt  unified_multimodal_foundation.py
config/: __init__.py  default.yaml  settings.py
configs/: base.yaml  causal_heuristic.yaml  causal_hybrid.yaml  causal_true.yaml  derpp_baseline.yaml
control_plane/: __init__.py  policy_engine.py  telemetry.py  tenancy.py
core/: pipeline.py  system_orchestrator.py
data/: loader.py
database/: models.py
deployment/: configs.py  enterprise.py  observability.py
docs/: CAUSAL_SELF_DIAGNOSIS_COMPLETE.md  QUANTIZATION_EVOLUTION_INDEX.md  active_learning_curiosity.md  api_reference.md  architecture.md  automated_theorem_proving.md  benchmark_results.csv  causal_diagnosis_quick_start.md  competitive_advantage_summary.md  compositional_concept_architecture.md  compositional_concept_implementation_summary.md  compositional_concept_learning.md  (+25 more)
(+166 files in other folders)
