[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "causal-continual-learning"
version = "0.1.0"
description = "TRUE Interventional Causality for Continual Learning Replay Buffer Selection"
authors = [
    {name = "Muhammad Zulhilmi Bin Rahmat", email = "zulhilmirahmat@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = [
    "continual-learning",
    "causal-inference",
    "replay-buffer",
    "catastrophic-forgetting",
    "do-calculus",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "PyYAML>=6.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
tracking = ["wandb>=0.16.0"]
viz = ["matplotlib>=3.8.0", "seaborn>=0.13.0", "rich>=13.7.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "pre-commit>=3.6.0",
]
all = [
    "causal-continual-learning[tracking,viz,dev]",
]

[project.urls]
Repository = "https://github.com/ZulAmi/symbioAI"

[tool.setuptools.packages.find]
where = ["."]
include = ["training*", "utils*", "scripts*"]

# ─── Ruff ────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["mammoth/", ".git/", "__pycache__/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N806",   # variable in function should be lowercase (conflicts with ML conventions)
]

[tool.ruff.lint.isort]
known-first-party = ["training", "utils", "scripts"]

# ─── Mypy ────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["mammoth/", "tests/"]

[[tool.mypy.overrides]]
module = ["torch.*", "torchvision.*", "sklearn.*", "scipy.*", "wandb.*", "omegaconf.*"]
ignore_missing_imports = true

# ─── Pytest ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -v"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# ─── Coverage ────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["training", "utils"]
omit = ["tests/*", "mammoth/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
